<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_dialog_laporan_keluhan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_backgroud"
            android:contentDescription="@string/desc_iv_warning"
            android:padding="5dp"
            android:src="@drawable/ic_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_label_form_laporan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tv_label_form_laporan"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_warning"
            app:layout_constraintStart_toEndOf="@id/iv_warning"
            app:layout_constraintTop_toTopOf="@id/iv_warning" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/desc_ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_warning"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/tv_tanggal_laporan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:background="@drawable/border_radius15_lightgreyback"
            android:drawableStart="@drawable/ic_date"
            android:text="@string/btn_tanggal_laporan"
            android:textStyle="bold"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_warning" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_dropdown_pilih_kendaraan"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_laporan">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_vehicle"
                android:drawablePadding="20dp"
                android:hint="@string/ti_dropdown_pilih_kendaraan"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_catatan_keluhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_dropdown_pilih_kendaraan">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_radius15_whitebackgreystroke"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ic_catatan"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_catatan" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_catatan_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Catatan Keluhan :"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <!-- Input Field -->
                    <EditText
                        android:id="@+id/et_catatan_keluhan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:hint="Masukkan keluhan Anda di sini..."
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:paddingTop="4dp"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_label_dokumen_laporan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_label_dokumen_laporan"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_catatan_keluhan" />

        <ImageView
            android:id="@+id/iv_keluhan"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_radius5_lightgreyback"
            android:padding="10dp"
            android:src="@drawable/ic_image"
            app:layout_constraintStart_toStartOf="@id/tv_label_dokumen_laporan"
            app:layout_constraintTop_toBottomOf="@id/tv_label_dokumen_laporan" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ambil_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ambil_foto"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/iv_keluhan"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/iv_keluhan"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/border_radius5_greyback"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_kirim_laporan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_kirim_laporan"
            android:background="@drawable/border_radius15_lightgreyback"
            app:layout_constraintTop_toBottomOf="@id/iv_keluhan"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>